name:               memento-mori-mural
version:            1.0.0
author:             Alex Washburn
maintainer:         Alex Washburn
copyright:          Copyright (C) 2021 Alex Washburn
synopsis:           A visual Momento Mori
category:           Data
description:
  Produces a visual depiction of the time past since birth and the remaining time
  unlived until a life expectancy date. Designed to spur spontaneity and urgency.

cabal-version:      >= 1.10
build-type:         Simple
tested-with:
  GHC==9.0.1
  GHC==8.10.4
  GHC==8.8.4
  GHC==8.6.5
  GHC==8.4.4
  GHC==8.2.2
  GHC==8.0.2
  GHC==7.10.3

executable memento-mori-mural

  main-is:
      app/Main.hs

  default-language:
      Haskell2010

  build-depends:
      base          >= 4.8   && < 5.0
    , time          >= 1.5   && < 2.0
    , transformers  >= 0.4.2 && < 6.0

  if impl(ghc <= 7.10.3)
    build-depends:
      semigroups    >= 0.11   && < 1.0

  ghc-options:
    -fexcess-precision
    -fexpose-all-unfoldings
    -fstatic-argument-transformation
    -j
    -O2
    -Wall

  if impl(ghc >= 8.10)
    ghc-options:
      -Wderiving-defaults
      -Wunused-packages
 
  if impl(ghc >= 8.8)
    ghc-options:
      -Wmissing-deriving-strategies          
      -fwrite-ide-info
      -hiedir=.hie

  if impl(ghc >= 8.6)
    ghc-options:
      -flate-specialise
      
  if impl(ghc >= 8.2)
    ghc-options:
      -fdiagnostics-color=always
      -fhide-source-paths
      -fspecialize-aggressively
      -Wmissing-home-modules

  if impl(ghc >= 8.0)
    ghc-options:
      -foptimal-applicative-do
      -Wcompat
      -Wdodgy-foreign-imports
      -Wduplicate-exports
      -Wempty-enumerations
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-patterns
      -Wincomplete-record-updates
      -Wmissed-specialisations          
      -Wmissing-fields
      -Wmissing-monadfail-instances
      -Wmissing-signatures
      -Wnoncanonical-monad-instances
      -Wnoncanonical-monoid-instances
      -Woverflowed-literals
      -Woverlapping-patterns
      -Wredundant-constraints
      -Wsemigroup
      -Wtabs
      -Wunrecognised-warning-flags
      -Wunused-binds
      -Wunused-do-bind
      -Wunused-foralls
      -Wunused-imports
      -Wunused-matches
      -Wwrong-do-bind


